parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@match.py-6.snap
---
source: parser/src/parser/parser.rs
description: "match a:\n    case (a, b):\n        pass\n    case {1: _ ,2: _}:\n        pass\n    case {**rest}:\n        pass"
input_file: parser/test_data/inputs/one_liners/match.py
---
Module {
    node: Node {
        start: 0,
        end: 106,
    },
    body: [
        Match(
            Match {
                node: Node {
                    start: 0,
                    end: 106,
                },
                subject: Name(
                    Name {
                        node: Node {
                            start: 6,
                            end: 7,
                        },
                        id: "a",
                    },
                ),
                cases: [
                    MatchCase {
                        node: Node {
                            start: 13,
                            end: 43,
                        },
                        pattern: MatchSequence(
                            [
                                MatchAs(
                                    MatchAs {
                                        node: Node {
                                            start: 19,
                                            end: 20,
                                        },
                                        name: Some(
                                            "a",
                                        ),
                                        pattern: None,
                                    },
                                ),
                                MatchAs(
                                    MatchAs {
                                        node: Node {
                                            start: 22,
                                            end: 23,
                                        },
                                        name: Some(
                                            "b",
                                        ),
                                        pattern: None,
                                    },
                                ),
                            ],
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 34,
                                        end: 38,
                                    },
                                },
                            ),
                        ],
                    },
                    MatchCase {
                        node: Node {
                            start: 43,
                            end: 79,
                        },
                        pattern: MatchMapping(
                            MatchMapping {
                                node: Node {
                                    start: 48,
                                    end: 60,
                                },
                                keys: [
                                    Constant(
                                        Constant {
                                            node: Node {
                                                start: 49,
                                                end: 50,
                                            },
                                            value: 1,
                                        },
                                    ),
                                    Constant(
                                        Constant {
                                            node: Node {
                                                start: 55,
                                                end: 56,
                                            },
                                            value: 2,
                                        },
                                    ),
                                ],
                                patterns: [
                                    MatchAs(
                                        MatchAs {
                                            node: Node {
                                                start: 52,
                                                end: 53,
                                            },
                                            name: None,
                                            pattern: None,
                                        },
                                    ),
                                    MatchAs(
                                        MatchAs {
                                            node: Node {
                                                start: 58,
                                                end: 59,
                                            },
                                            name: None,
                                            pattern: None,
                                        },
                                    ),
                                ],
                                rest: None,
                            },
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 70,
                                        end: 74,
                                    },
                                },
                            ),
                        ],
                    },
                    MatchCase {
                        node: Node {
                            start: 79,
                            end: 106,
                        },
                        pattern: MatchMapping(
                            MatchMapping {
                                node: Node {
                                    start: 84,
                                    end: 92,
                                },
                                keys: [],
                                patterns: [],
                                rest: Some(
                                    "rest",
                                ),
                            },
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 102,
                                        end: 106,
                                    },
                                },
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
