parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@match.py-7.snap
---
source: parser/src/parser/parser.rs
description: "match x:\n    case Point2D(0, 0):\n        pass\n    case Point3D(x=0, y=0, z=0):\n        pass"
input_file: parser/test_data/inputs/one_liners/match.py
---
Module {
    node: Node {
        start: 0,
        end: 91,
    },
    body: [
        Match(
            Match {
                node: Node {
                    start: 0,
                    end: 91,
                },
                subject: Name(
                    Name {
                        node: Node {
                            start: 6,
                            end: 7,
                        },
                        id: "x",
                    },
                ),
                cases: [
                    MatchCase {
                        node: Node {
                            start: 13,
                            end: 50,
                        },
                        pattern: MatchClass(
                            MatchClass {
                                node: Node {
                                    start: 25,
                                    end: 31,
                                },
                                cls: Name(
                                    Name {
                                        node: Node {
                                            start: 18,
                                            end: 17,
                                        },
                                        id: "Point2D",
                                    },
                                ),
                                patterns: [
                                    MatchValue(
                                        MatchValue {
                                            node: Node {
                                                start: 26,
                                                end: 27,
                                            },
                                            value: Constant(
                                                Constant {
                                                    node: Node {
                                                        start: 26,
                                                        end: 27,
                                                    },
                                                    value: 0,
                                                },
                                            ),
                                        },
                                    ),
                                    MatchValue(
                                        MatchValue {
                                            node: Node {
                                                start: 29,
                                                end: 30,
                                            },
                                            value: Constant(
                                                Constant {
                                                    node: Node {
                                                        start: 29,
                                                        end: 30,
                                                    },
                                                    value: 0,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                                kwd_attrs: [],
                                kwd_patterns: [],
                            },
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 41,
                                        end: 45,
                                    },
                                },
                            ),
                        ],
                    },
                    MatchCase {
                        node: Node {
                            start: 50,
                            end: 91,
                        },
                        pattern: MatchClass(
                            MatchClass {
                                node: Node {
                                    start: 62,
                                    end: 77,
                                },
                                cls: Name(
                                    Name {
                                        node: Node {
                                            start: 55,
                                            end: 54,
                                        },
                                        id: "Point3D",
                                    },
                                ),
                                patterns: [],
                                kwd_attrs: [
                                    "x",
                                    "y",
                                    "z",
                                ],
                                kwd_patterns: [
                                    MatchValue(
                                        MatchValue {
                                            node: Node {
                                                start: 65,
                                                end: 66,
                                            },
                                            value: Constant(
                                                Constant {
                                                    node: Node {
                                                        start: 65,
                                                        end: 66,
                                                    },
                                                    value: 0,
                                                },
                                            ),
                                        },
                                    ),
                                    MatchValue(
                                        MatchValue {
                                            node: Node {
                                                start: 70,
                                                end: 71,
                                            },
                                            value: Constant(
                                                Constant {
                                                    node: Node {
                                                        start: 70,
                                                        end: 71,
                                                    },
                                                    value: 0,
                                                },
                                            ),
                                        },
                                    ),
                                    MatchValue(
                                        MatchValue {
                                            node: Node {
                                                start: 75,
                                                end: 76,
                                            },
                                            value: Constant(
                                                Constant {
                                                    node: Node {
                                                        start: 75,
                                                        end: 76,
                                                    },
                                                    value: 0,
                                                },
                                            ),
                                        },
                                    ),
                                ],
                            },
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 87,
                                        end: 91,
                                    },
                                },
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
