parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@match.py-8.snap
---
source: parser/src/parser/parser.rs
description: "match x:\n    case [a, b, c]:\n        pass\n"
input_file: parser/test_data/inputs/one_liners/match.py
---
Module {
    node: Node {
        start: 0,
        end: 42,
    },
    body: [
        Match(
            Match {
                node: Node {
                    start: 0,
                    end: 42,
                },
                subject: Name(
                    Name {
                        node: Node {
                            start: 6,
                            end: 7,
                        },
                        id: "x",
                    },
                ),
                cases: [
                    MatchCase {
                        node: Node {
                            start: 13,
                            end: 42,
                        },
                        pattern: MatchSequence(
                            [
                                MatchAs(
                                    MatchAs {
                                        node: Node {
                                            start: 19,
                                            end: 20,
                                        },
                                        name: Some(
                                            "a",
                                        ),
                                        pattern: None,
                                    },
                                ),
                                MatchAs(
                                    MatchAs {
                                        node: Node {
                                            start: 22,
                                            end: 23,
                                        },
                                        name: Some(
                                            "b",
                                        ),
                                        pattern: None,
                                    },
                                ),
                                MatchAs(
                                    MatchAs {
                                        node: Node {
                                            start: 25,
                                            end: 26,
                                        },
                                        name: Some(
                                            "c",
                                        ),
                                        pattern: None,
                                    },
                                ),
                            ],
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 37,
                                        end: 41,
                                    },
                                },
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
