parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@match.py.snap
---
source: parser/src/parser/parser.rs
description: "match a:\n    case 1:\n        pass"
input_file: parser/test_data/inputs/one_liners/match.py
---
Module {
    node: Node {
        start: 0,
        end: 33,
    },
    body: [
        Match(
            Match {
                node: Node {
                    start: 0,
                    end: 33,
                },
                subject: Name(
                    Name {
                        node: Node {
                            start: 6,
                            end: 7,
                        },
                        id: "a",
                    },
                ),
                cases: [
                    MatchCase {
                        node: Node {
                            start: 13,
                            end: 33,
                        },
                        pattern: MatchValue(
                            MatchValue {
                                node: Node {
                                    start: 18,
                                    end: 19,
                                },
                                value: Constant(
                                    Constant {
                                        node: Node {
                                            start: 18,
                                            end: 19,
                                        },
                                        value: 1,
                                    },
                                ),
                            },
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 29,
                                        end: 33,
                                    },
                                },
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
